fix scrollbar bug on long messages

--- a/front-end/src/components/Chat/Messages.module.css
+++ b/front-end/src/components/Chat/Messages.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
+  word-break: break-all;
 }
 
 .chat-messages-container {
